# solvate-ai

./: .env.local.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 8eaa5db9abe4_add_industry_events_tables.py  a1b2c3d4e5f6_add_taxonomy_tables.py  b2c3d4e5f6a7_extend_product_model.py  c3d4e5f6g7h8_add_extraction_tables.py  d4e5f6g7h8i9_add_versioning_columns.py
backend/output/agent_results/: agent_costs_20260210_205649.json  agent_costs_20260210_225544.json  agent_golden_records_20260210_205649.json  agent_golden_records_20260210_225544.json  agent_partials_20260210_205649.json  agent_partials_20260210_225544.json  agent_summary_20260210_205649.csv  agent_summary_20260210_225544.csv  regression_report.txt
backend/output/batch_results/: batch_costs_20260210_143600.csv  batch_costs_20260210_143809.csv  batch_costs_20260210_145225.csv  batch_costs_20260210_194712.csv  batch_results_20260210_143600.csv  batch_results_20260210_143600.json  batch_results_20260210_143809.csv  batch_results_20260210_143809.json  batch_results_20260210_145225.csv  batch_results_20260210_145225.json  batch_results_20260210_194712.csv  batch_results_20260210_194712.json
backend/scripts/: batch_agent_extract.py  batch_extract.py  regression_compare.py  run_event_collector.py
backend/tests/: conftest.py
docker/: Caddyfile
(+74 files in other folders)
